--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,137 +1,260 @@
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#15141f"
+    android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".SearchFragment">
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="158dp"
+        android:layout_height="91dp"
+        android:src="@drawable/logo"
+        android:layout_gravity="center_horizontal"/>
 
-    <ScrollView
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/custom_background"
+        android:backgroundTint="#8BC34A"
+        android:commitIcon="@android:drawable/ic_menu_search"
+        android:searchHintIcon="@android:drawable/ic_menu_search"
+        android:searchIcon="@android:drawable/ic_menu_search">
+<!--        android:imeOptions="actionSearch"-->
+
+
+<!--        <Spinner-->
+<!--            android:id="@+id/spinner"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"/>-->
+
+    </SearchView>
+    <LinearLayout
+        android:id="@+id/advanced_options_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/searchCSL"
+        <!-- Advanced options content -->
+        <LinearLayout
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Movie name: "
+                />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Mahou Shoujo Madoka★Magika"
+                android:id="@+id/animeNameAdvancedSearch"
+                />
+        </LinearLayout>
+        <LinearLayout
+             android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Year airing:  "
+                />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="2011"
+                android:id="@+id/yearAdvancedSearch"
+                />
+    </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="158dp"
-                android:layout_height="91dp"
-                android:src="@drawable/logo"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Genres"
+            />
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:rowCount="2"
+            android:columnCount="4"
+            android:padding="10dp"
+            >
 
-            <SearchView
-                android:id="@+id/searchView"
-                android:layout_width="350dp"
-                android:layout_height="match_parent"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="12dp"
-                android:background="@drawable/custom_background"
-                android:backgroundTint="#211F30"
-                android:commitIcon="@android:drawable/ic_menu_search"
-                android:searchHintIcon="@android:drawable/ic_menu_search"
-                android:searchIcon="@android:drawable/ic_menu_search"
-                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.495"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3">
+            <CheckBox
+                android:id="@+id/checkBoxFantasy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Fantasy"/>
 
-            </SearchView>
+            <CheckBox
+                android:id="@+id/checkBoxHorror"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Horror"/>
 
-            <HorizontalScrollView
-                android:id="@+id/horizontalScrollView"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:scrollbars="none"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="21dp"
-                app:layout_constraintBottom_toTopOf="@+id/recyclerView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/searchView"
-                tools:ignore="SpeakableTextPresentCheck">
+            <CheckBox
+                android:id="@+id/checkBoxScience"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Science"/>
 
-<!--                <com.google.android.material.bottomnavigation.BottomNavigationView-->
-<!--                    android:id="@+id/bottomNavigationView1"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:background="#15141f"-->
-<!--                    app:itemTextColor="@drawable/gallary_selector"-->
-<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintStart_toStartOf="parent"-->
-<!--                    app:menu="@menu/gallary_bar"></com.google.android.material.bottomnavigation.BottomNavigationView>-->
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/category"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
-                    app:tabMode="scrollable"
-                    app:tabSelectedTextColor="#fb795d"
-                    app:tabIndicatorColor="#fb795d"
-                    app:tabIndicatorFullWidth="true"
-                    app:tabTextAppearance="@style/MyCustomTextAppearance"
-                    app:layout_constraintEnd_toEndOf="parent">
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="All" />
+            <CheckBox
+                android:id="@+id/checkBoxAction"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Action"/>
 
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Fantasy" />
+            <CheckBox
+                android:id="@+id/checkBoxRomance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Romance"/>
 
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Horror" />
+            <CheckBox
+                android:id="@+id/checkBoxComedy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Comedy"/>
 
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Science" />
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Action" />
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Romance" />
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Comedy" />
-                </com.google.android.material.tabs.TabLayout>
-            </HorizontalScrollView>
+<!--            <CheckBox-->
+<!--                android:id="@+id/checkBox7"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Option 7"/>-->
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
+<!--            <CheckBox-->
+<!--                android:id="@+id/checkBox8"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Option 8"/>-->
+        </GridLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnAdvancedSearch"
+            android:text="Search Anime"
+            android:layout_gravity="center"
+            android:backgroundTint="#FFEB3B"
+            />
+
+    </LinearLayout>
+
+    <!-- Expand/Collapse button -->
+    <LinearLayout
+        android:id="@+id/expand_collapse_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_gravity="center">
+
+
+
+        <TextView
+            android:id="@+id/expand_collapse_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Advanced search"
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"/>
+
+
+        <ImageView
+            android:id="@+id/expand_collapse_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow_down"/>
+
+    </LinearLayout>
+
+
+<!--    <TextView-->
+<!--        android:id="@+id/expandCollapseText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Show Advanced Options"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:textSize="16sp"-->
+<!--        android:textColor="#000000"-->
+<!--        android:layout_gravity="center_horizontal" />-->
+
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:scrollbars="none"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="21dp">
+
+            <com.google.android.material.tabs.TabLayout
+            android:id="@+id/category"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="#AB548E88"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            app:tabMode="scrollable"
+            app:tabSelectedTextColor="#0027FF"
+            app:tabIndicatorColor="#4C3635"
+            app:tabIndicatorFullWidth="true"
+            app:tabTextAppearance="@style/MyCustomTextAppearance">
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="All" />
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Fantasy" />
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Horror" />
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Science" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Action" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Romance" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Comedy" />
+
+        </com.google.android.material.tabs.TabLayout>
+    </HorizontalScrollView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginEnd="20dp"
+        android:background="#FFFAD1"
+        />
 
     <TextView
         android:id="@+id/textView2"
@@ -139,7 +262,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
         android:layout_marginTop="10dp"
-        android:text="No have Result"
-        android:textSize="30sp"
-        app:layout_constraintTop_toTopOf="@id/horizontalScrollView" />
-</FrameLayout>
+        android:text="Sorry, no animes were found!"
+        android:textSize="22sp"
+        android:visibility="gone"
+        />
+</LinearLayout>
